--- a/www/ru/toc.yaml
+++ b/www/ru/toc.yaml
@@ -1,6 +1,6 @@
 navigation:
   logo:
-    url: 'https://example.com'
+    url: 'https://3y3.github.io/diplodoc-site/ru/'
     dark:
       icon: 'https://storage.yandexcloud.net/cloud-www-assets/constructor/storybook/images/icon_1_dark.svg'
       text: 'ModelsJS'
@@ -11,7 +11,7 @@ navigation:
     leftItems:
       - text: 'Documentation'
         type: 'link'
-        url: './ru/about'
+        url: 'diplodoc-site/ru/about'
     rightItems:
       - type: controls
 items:
