--- a/www/ru/toc.yaml
+++ b/www/ru/toc.yaml
@@ -2,11 +2,11 @@ navigation:
   logo:
     url: '/diplodoc-site/ru/'
     dark:
-      icon: 'https://storage.yandexcloud.net/cloud-www-assets/constructor/storybook/images/icon_1_dark.svg'
-      text: 'ModelsJS'
+      icon: '/diplodoc-site/_assets/diplodoc-dark.png'
+      text: 'Diplodoc'
     light:
-      icon: 'https://storage.yandexcloud.net/cloud-www-assets/constructor/storybook/images/icon_1_light.svg'
-      text: 'ModelsJS'
+      icon: '/diplodoc-site/_assets/diplodoc-light.png'
+      text: 'Diplodoc'
   header:
     leftItems:
       - text: 'Documentation'
